# yamerl

./: .gitignore  .travis.yml  AUTHORS  COPYING  LICENSE  Makefile  Makefile.am  README.md  configure.ac  edoc-info  index.html  mix.exs  modules-frame.html  overview-summary.html  overview.edoc  package.exs  rebar.config  rebar.config.script  yamerl.html  yamerl_constr.html  yamerl_parser.html  yamerl_yamler_compat.html
.github/workflows/: docs.yaml  test-and-release.yaml  test-job.yaml  test.yaml
debian/: changelog  control  copyright  rules
debian/source/: options
doc/: README.md  alternatives.md  features.md  installation.md  overview.edoc
doc-md/: features.md  installation.md
doc-md/reference-manual/: module-yamerl_constr.md
doc/reference-manual/: README.md  (+1 more)
ebin/: Makefile.am  yamerl.app.in.in  yaml.app.in.in  yaml.appup.in
include/: Makefile.am  yamerl_constr.hrl  yamerl_errors.hrl  yamerl_nodes.hrl  yamerl_nodes_yakaz.hrl  yamerl_nodes_yamerl_extensions.hrl  yamerl_tokens.hrl  yamerl_types.hrl  yaml_errors.hrl  yaml_nodes.hrl  yaml_nodes_yakaz.hrl  yaml_parser.hrl  yaml_repr.hrl  yaml_tokens.hrl  yaml_types.hrl
include/internal/: yamerl_constr.hrl  yamerl_parser.hrl  yaml_constr.hrl  yaml_parser.hrl  yaml_repr.hrl
src/: Emakefile.in.in  Makefile.am  yamerl.app.src  yamerl.appup.src  yamerl.erl  yamerl_app.erl  yamerl_constr.erl  yamerl_errors.erl  yamerl_node_binary.erl  yamerl_node_bool.erl  yamerl_node_bool_ext.erl  yamerl_node_bool_json.erl  yamerl_node_erlang_atom.erl  yamerl_node_erlang_fun.erl  yamerl_node_float.erl  yamerl_node_float_ext.erl  yamerl_node_float_json.erl  yamerl_node_int.erl  yamerl_node_int_ext.erl  yamerl_node_int_json.erl  yamerl_node_ipaddr.erl  yamerl_node_map.erl  yamerl_node_merge.erl  yamerl_node_null.erl  yamerl_node_null_json.erl  yamerl_node_seq.erl  yamerl_node_size.erl  yamerl_node_str.erl  yamerl_node_str_json.erl  yamerl_node_timestamp.erl  yamerl_parser.erl  yamerl_sup.erl  yamerl_yamler_compat.erl  yaml_app.erl  yaml_constr.erl  yaml_errors.erl  yaml_node_bool.erl  yaml_node_bool_ext.erl  yaml_node_bool_json.erl  yaml_node_erlang_atom.erl  (+25 more)
testsuite/: Makefile.am  benchmark.in  cover_to_html  cover_to_html.sh  dialyzer.in  etest.in  eunit_lib.erl  eunit_tty.erl  gen-test-erlang-module  prepare-testsuite-for-rebar  template.erl  template.pl  test_coverage  test_coverage.escript
testsuite/data/benchmark/: bench-mochijson2  bench-xmerl_sax_parser  bench-yamerl_parser  bench-yaml_parser  bench-yamler  input.xml  input.yaml  mochijson2.erl
testsuite/data/construction/: alias.pattern  bool.pattern  bool_json.pattern  empty.pattern  erlang_atom.data  erlang_atom.pattern  erlang_atom_if_exist.data  erlang_atom_if_exist.pattern  erlang_atom_if_exist_auto.pattern  erlang_fun.data  erlang_fun.pattern  float.data  float.pattern  int.data  int.pattern  ipaddr.pattern  map.data  map.pattern  null.data  null.pattern  null_json.data  null_json.pattern  seq.pattern  size.data  size.pattern  str.pattern  stream.pattern  timestamp.pattern  unicode_string.pattern  unknown_alias.data  unknown_alias.pattern
testsuite/data/examples/: invoice.data  invoice.pattern  logfile.pattern
testsuite/data/parsing/: COVERED-MODS  block_mapping_noeol.data  block_mapping_noeol.pattern  bom_between_docs.pattern  dos_newlines.pattern  empty.pattern  enc_invalid_unicode.pattern  enc_utf16be_bom.pattern  enc_utf16be_bom.yaml  enc_utf16be_char.pattern  enc_utf16le_bom.pattern  enc_utf16le_bom.yaml  enc_utf16le_char.pattern  enc_utf16le_char.yaml  enc_utf32be_bom.data  enc_utf32be_bom.pattern  enc_utf32be_char.pattern  enc_utf32le_bom.pattern  enc_utf32le_char.pattern  enc_utf8_bom.pattern  enc_utf8_char.pattern  ex_5.10_reserved_indicators.pattern  ex_5.12_tabs_and_spaces.pattern  ex_5.13_escaped_characters.data  ex_5.13_escaped_characters.pattern  ex_5.14_invalid_escaped_characters.pattern  ex_5.2_invalid_bom.pattern  ex_5.3_block_structure_indicators.pattern  ex_5.4_flow_collection_indicators.pattern  ex_5.6_node_property_indicators.pattern  ex_5.7_block_scalar_indicators.pattern  ex_5.8_quoted_scalar_indicators.pattern  ex_5.9_directive_indicator.pattern  ex_6.11_multiline_comments.pattern  ex_6.12_separation_spaces.pattern  ex_6.13_reserved_directives.pattern  ex_6.14_yaml_directive.pattern  ex_6.15_invalid_repeated_yaml_directive.pattern  ex_6.16_tag_directive.pattern  ex_6.17_invalid_repeated_tag_directive.pattern  (+104 more)
testsuite/data/representation/: COVERED-MODS  bool.pattern  bool.yaml  empty.pattern  erlang_atom.pattern  erlang_fun.pattern  erlang_fun.yaml  int.pattern  int.yaml  ipaddr.pattern  ipaddr.yaml  map.pattern  null.pattern  seq.pattern  size.pattern  timestamp.pattern
testsuite/data/t_yaml_parser/: bom_between_docs.pattern  bom_between_docs.yaml  dos_newlines.pattern  empty.pattern  enc_invalid_unicode.pattern  enc_invalid_unicode.yaml  enc_utf16be_bom.pattern  enc_utf16be_char.pattern  enc_utf16be_char.yaml  enc_utf16le_bom.pattern  enc_utf16le_char.pattern  enc_utf32be_bom.pattern  enc_utf32be_char.pattern  enc_utf32be_char.yaml  enc_utf32le_bom.pattern  enc_utf32le_bom.yaml  enc_utf32le_char.pattern  enc_utf32le_char.yaml  enc_utf8_bom.pattern  enc_utf8_bom.yaml  enc_utf8_char.pattern  enc_utf8_char.yaml  ex_5.10_reserved_indicators.pattern  ex_5.12_tabs_and_spaces.pattern  ex_5.13_escaped_characters.pattern  ex_5.14_invalid_escaped_characters.pattern  ex_5.2_invalid_bom.pattern  ex_5.2_invalid_bom.yaml  ex_5.3_block_structure_indicators.pattern  ex_5.4_flow_collection_indicators.pattern  ex_5.6_node_property_indicators.pattern  ex_5.7_block_scalar_indicators.pattern  ex_5.8_quoted_scalar_indicators.pattern  ex_5.9_directive_indicator.pattern  ex_6.11_multiline_comments.pattern  ex_6.12_separation_spaces.pattern  ex_6.13_reserved_directives.pattern  ex_6.14_yaml_directive.pattern  ex_6.15_invalid_repeated_yaml_directive.pattern  ex_6.16_tag_directive.pattern  (+117 more)
testsuite/data/wrapper/: decode.pattern  decode_file.pattern
testsuite/data/yamler_compat/: float.data  float.pattern  map.data  map.pattern  seq.data  str.pattern
(+194 files in other folders)
