# $Id: Makefile.am 2944 2010-05-11 08:46:58Z jean.sebastien.pedron $

ACLOCAL_FLAGS = -I m4
ACLOCAL_AMFLAGS = -I m4

SUBDIRS = include src ebin testsuite

EXTRA_DIST = REPOREV							\
	     debian/changelog						\
	     debian/compat						\
	     debian/control						\
	     debian/copyright						\
	     debian/rules

distdir = $(PACKAGE)-$(VERSION)$(APP_DISTSUFFIX)
