ACLOCAL_FLAGS = -I m4
ACLOCAL_AMFLAGS = -I m4

SUBDIRS = include src ebin testsuite

EXTRA_DIST = README.md							\
	     AUTHORS							\
	     COPYING							\
	     debian/changelog						\
	     debian/compat						\
	     debian/control						\
	     debian/copyright						\
	     debian/rules						\
	     debian/source/format					\
	     debian/source/options
