headersdir = $(ERLANG_INSTALL_LIB_DIR_yamerl)/include

nobase_dist_headers_DATA = yamerl_types.hrl				\
			   yamerl_errors.hrl				\
			   yamerl_tokens.hrl				\
			   yamerl_nodes.hrl				\
			   yamerl_nodes_yamerl_extensions.hrl		\
			   internal/yamerl_parser.hrl			\
			   internal/yamerl_constr.hrl
